feat: Update React version and add animation for nagging messages
Updates the project to use React v19.2.3.

Introduces a new CSS animation (`slideInNag`) and associated component (`NaggingMessage`) to display timed, animated feedback messages to the user. This is intended to provide unobtrusive but noticeable prompts for specific actions or information.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^18.2.0"
+    "react": "^19.2.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
