refactor: Update project name and dependencies
The project name has been updated to "dr.-zead's-prostho-boss-hub-v2" and `react-dom` has been added as a dependency. The `index.html` has been modified to use the new title and include the confetti CDN, while the `index.tsx` file now contains the full application logic for standalone execution.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fixed-prosthodontics-hub-|-theboss",
+  "name": "dr.-zead's-prostho-boss-hub-v2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
