--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dr.-zead's-prostho-boss-hub-v2",
+  "name": "fixed-prosthodontics-mastery",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "lucide-react": "0.475.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
